# security-advisor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  server.py
docs/: index.html  install.html  integration.html  manager.html  workflow.html
docs/assets/: style.css
mcp_server/: container_scanner.py  main.py  sarif_report.py
pkg/: sarif_report.py
vulnerability_manager/: __init__.py  auth.py  database.py
vulnerability_manager/models/: organization.py  project.py  service.py  user.py  version.py  vulnerability.py
vulnerability_manager/routers/: auth.py  organizations.py  projects.py  services.py  users.py  versions.py  vulnerabilities.py
vulnerability_manager/schemas/: vulnerability_schema.json
vulnerability_manager/templates/: base.html  index.html  login.html
vulnerability_manager/templates/organizations/: _form.html  _list_rows.html  detail.html  list.html
vulnerability_manager/templates/projects/: _form.html  _list_rows.html  detail.html  list.html
vulnerability_manager/templates/services/: _form.html  _list_rows.html  detail.html  list.html
vulnerability_manager/templates/users/: _form.html  _list_rows.html  detail.html  list.html
vulnerability_manager/templates/versions/: _form.html  _list_rows.html  detail.html  list.html
vulnerability_manager/templates/vulnerabilities/: _form.html  _list_rows.html  _upload.html  detail.html  list.html
