[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "security-advisor"
version = "1.0.0"
description = "Vulnerability Management Platform with FastAPI, SQLModel and HTMX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.21",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "fastmcp>=3.2.4",
    "mcp>=1.27.1",
]

[tool.setuptools.packages.find]
include = ["mcp_server*", "vulnerability_manager*"]
